fix spacing for headings

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,14 +8,28 @@ h1, h2, h3, h4, h5, h6 {
 
 h2 {
 	font-size: 3em;
+	padding-top: $vertical-space/2;
+	margin-bottom: $vertical-space/3;
 	@include media-query(767px){
 		font-size: 2em;
 	}
 }
 
+#hero-section {
+	h2, h4 {
+		margin: 0;
+		padding: 0;
+	}
+	h2 {
+		margin-top: $vertical-space;
+	}
+	h4 {
+		margin-top: $vertical-space/4;
+	}
+}
+
 h3 {
 	font-size: 2.25em;
-	margin-bottom: $vertical-space;
 	@include media-query(767px){
 		font-size: 1.75em;
 	}
@@ -25,6 +39,7 @@ h4 {
 	font-size: 2.25em;
 	font-weight: 300;
 	font-style: italic;
+	margin-bottom: $vertical-space/3;
 	@include media-query(767px){
 		font-size: 1.25em;
 	}
@@ -37,8 +52,16 @@ h5 {
 }
 
 h6 {
+	margin-top: $vertical-space/2;
 	color: $primary-navy;
 	font-size: 1.5em;
+}
+
+h6.subtitle {
+	margin-top: -10px;
+	text-transform: uppercase;
+	font-weight: 400;
+	font-style: italic;
 }
 
 .header-navy {
